cmake_minimum_required(VERSION 3.1)

add_subdirectory(Cuestion1.1)

add_subdirectory(Cuestion2.2)
add_subdirectory(Cuestion2.3)
add_subdirectory(Cuestion2.4)
add_subdirectory(Cuestion2.5)
add_subdirectory(Cuestion3.1)
add_subdirectory(Cuestion3.2)
add_subdirectory(Cuestion3.3)
add_subdirectory(Cuestion3.4)
add_subdirectory(Cuestion3.5)
